--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,5 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/phpunit,laravel,phpstorm,composer,git
 /public/build/
+.idea/codeStyles/codeStyleConfig.xml
+.idea/inspectionProfiles/Project_Default.xml
